Complete User Account & Profile

--- a/templates/account/register.html
+++ b/templates/account/register.html
@@ -18,19 +18,19 @@
         <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
       </div>
       
-    </div>
+    </div>gender
     <div class="row">
       <div class="col-md-4 form-group mt-3">
         <input type="text" class="form-control" name="address" id="address" placeholder="Your address" required>      </div>
       <div class="col-md-4 form-group mt-3">
-        <select name="role" id="role" class="form-select">
+        <select name="role" id="role" class="form-select" required>
           <option value="">Select Role</option>
           <option value="Patient">Patient</option>
           <option value="Doctor">Doctor</option>
         </select>
       </div>
       <div class="col-md-4 form-group mt-3">
-        <select name="doctor" id="doctor" class="form-select">
+        <select name="gender" id="gender" class="form-select" required>
           <option value="">Select Gender</option>
           <option value="Male">Male</option>
           <option value="Female">Female</option>
