--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
       <div class="carousel-inner" role="listbox">
 
         <!-- Slide 1 -->
-        <div class="carousel-item active" style="background-image: url(assets/img/slide/slide-1.jpg)">
+        <div class="carousel-item active" style="background-image: url(static/img/slide/slide-1.jpg)">
           <div class="container">
             <h2>Welcome to <span>E Health</span></h2>
             <p>Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea voluptatem. Esse doloremque accusamus repellendus deleniti vel.</p>
@@ -22,19 +22,20 @@
           </div>
         </div>
 
-		<img src="{% static "img/about.jpg" %}" alt="e health" style="width: 100%"> 
+		{# <img src="{% static "img/about.jpg" %}" alt="e health" style="width: 100%"> #}
         <!-- Slide 2 -->
-		<div class="carousel-item" style="background-image: url({% static "img/img3.jpg" %}")"></div>
-        <div class="carousel-item" style="background-image: url(assets/img/slide/slide-2.jpg)">
+	
+        <div class="carousel-item" id="was" style="background-image: url(static/img/slide/slide-2.jpg)">
+         
           <div class="container">
-            <h2>Wasiu</h2>
+            <h2>We Are The Foremost Health Services </h2>
             <p>Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea voluptatem. Esse doloremque accusamus repellendus deleniti vel.</p>
             <a href="#about" class="btn-get-started scrollto">Read More</a>
           </div>
         </div>
 
         <!-- Slide 3 -->
-        <div class="carousel-item" style="background-image: url(assets/img/slide/slide-3.jpg)">
+        <div class="carousel-item" style="background-image: url(static/img/bed.jpg)">
           <div class="container">
             <h2>Sequi ea ut et est quaerat</h2>
             <p>Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea voluptatem. Esse doloremque accusamus repellendus deleniti vel.</p>
