--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
 
 
          <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
+  <link href="/static/img/favicon.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
