--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1802,3 +1802,30 @@ section {
 }
 
 
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+  width: 100%;
+  border: 1px solid rgb(235, 232, 232);
+}
+
+th, td {
+  text-align: left;
+  padding: 8px;
+}
+
+tr:nth-child(even){background-color: #f2f2f2}
+
+
+.btndownload {
+  background-color: rgb(30, 144, 255);
+  border: none;
+  color: #fff;
+  padding: 12px 30px;
+  cursor: pointer;
+  font-size: 20px;
+}
+
+.download-link{
+  color: #fff;
+}
